3.1.16
* nerfed mana battery
* reduced ore spawns
* added a NONE gui overlay option for those that like to live on edge and hate bars
* Fireball, Frostball and Thunderspear now have reduced mana cost, no cast time, have cooldown and can be set as a right click spell on mage weapons.
* staffs and wands no longer have the projectile right click attack.

3.1.15
* reworked way i send datapack packets onlogin, so exceeding 1 mb limit should not be possible anymore.
* reduced xp share distance a bit
* tweaked mob strength
3.1.14
* buffed ranger spells a bit
* fix lan problems
* added a new dungeon room with a new kind of block, scramble block!
3.1.13
* added tridents
* fixed party exp sharing
* attempt to fix mysterious bug
* hopefully should fix game not working for turkey players
* fix player lvl getting reset (note to self, some code has more than 1 effect)
3.1.12
* switched to release build. Servers don't seem to be crashing anymore, mod seems stable now!
* another dmg and exp party fix attempt
3.1.11
* attempt to fix parties
* should stop auto salvage bag from salvaging enchanted or named items.
* reduced map loot drops a bit
* fix key of unity and key of new dawn.
3.1.10
* mobs in maps shouldnt despawn anymore
* should fix party commands needing OP
* try fix party members being able to kill each other
* added new dungeon rooms
* made dungeon size random but usually smaller
* dungeon will attempt to limit boss rooms to 1 or 2
* attempt to make mobs not move until they see player in dungeons
3.1.9
* made parties not save on server reboot due to lag.
* fix nullp in loot gen
3.1.8
* try fix structure blocks not being activated in dungeons
* fix being able to place blocks in dungeons
* added party exp sharing if nearby
3.1.7
* make it possible to destroy graves from other mods in dungeons.
3.1.6
* nerfed boss and mythic mobs dmg a bit
* loot tweaks
* fix death not losing exp
3.1.5
* fixed each map portal having its own dungeon