@@ -301,6 +301,8 @@ b6fb3cbd6b78712a9573aa6b9ebf3299ee6baa53 data\mmorpg\advancements\mine_and_slash
 5b21350276c1723df6f3f3593644807f68479a83 data\mmorpg\advancements\mine_and_slash\root.json
 959c9e78bbf075aafa2bb4ebfca71eedaf4c4620 data\mmorpg\advancements\mine_and_slash\salvage.json
 be2078e3c4d888978995e453e9d18639a1527366 data\mmorpg\advancements\mine_and_slash\stone_of_hope.json
+2ddccf78d3e02e363769ee5b61ef147b96dcd683 data\mmorpg\advancements\recipes\mmorpg_main\currency\add_prefix.json
+cf3be41d4e9d62ae6c3e83cfb55cd9d5c79a3fd2 data\mmorpg\advancements\recipes\mmorpg_main\currency\add_suffix.json
 e5e372e0bd5ca39b9a4eeed2a48621d795638395 data\mmorpg\advancements\recipes\mmorpg_main\mat\crystallized_essence.json
 27217357ba571669928c004696c2e362f73ca65d data\mmorpg\advancements\recipes\mmorpg_main\mat\golden_orb.json
 995752efc973293bec5469021da6339857289c63 data\mmorpg\advancements\recipes\mmorpg_main\mat\infused_iron.json
@@ -605,24 +607,26 @@ d7ae8340aa9d135bb79eb929fcf5b7e98cc15c40 data\mmorpg\compatible_items\mmorpg\wan
 329bb3e11dd660e08c6a0f8362b4552c5ae77ccc data\mmorpg\compatible_items\mmorpg\wand\wand2.json
 c008f702eff67a1fcfa35556e6725777a8cf67ef data\mmorpg\compatible_items\mmorpg\wand\wand3.json
 fe1c0a3b13562ebb717f5b1e289ed8f85a1bb98e data\mmorpg\compatible_items\mmorpg\wand\wand4.json
+3ce94d8de9637e051fcbbfe7e88defc764f929b6 data\mmorpg\recipes\currency\add_prefix.json
+244f77b14101788d5b860dcbbd22eff63329d0b0 data\mmorpg\recipes\currency\add_suffix.json
 f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_essence.json
 68a5369db8941d9b13c843efb96a723729895ce9 data\mmorpg\recipes\mat\golden_orb.json
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 8065df119c23aeede0970893c22786d1fd131446 data\mmorpg\recipes\mat\mythic_essence.json
-e19b46ac8f6442d343561fb29fa79908899722dc data\mmorpg\runes\ano.json
+5a868db10e7eda37bb1767d023dccc67c6157bd2 data\mmorpg\runes\ano.json
 c9a3f1e3a3bd28cd6902d1622c0aeff9f5b08708 data\mmorpg\runes\ber.json
-37ed64796f8359876b33fee8037bb40c19b5c01e data\mmorpg\runes\cen.json
-89b9bd1dcc4cb5823590507cc2d0f5506554f30e data\mmorpg\runes\dos.json
-34a9bfe2f8f01d09ab7550d2a53815c81c3f9983 data\mmorpg\runes\goh.json
-3c9bb9d48bd53e06dedce2dcadab7b6ab340ad43 data\mmorpg\runes\ita.json
-d813ac6d0fa4ab00adae9648a94b4369e77ac862 data\mmorpg\runes\mos.json
+96da7d2f378b18f453d0105315b2bfa705ee83a5 data\mmorpg\runes\cen.json
+cab4e4a0a09f491e411f3d12899878948a988067 data\mmorpg\runes\dos.json
+669b781d7e3305e5ceee9c4cb73d9f8905359093 data\mmorpg\runes\goh.json
+f4061b7d9d3bf3bd15d56c4305b0187330e233dd data\mmorpg\runes\ita.json
+e2b4df89c36966e46012a8f74315417c05d8308e data\mmorpg\runes\mos.json
 fae65a1ab682a1beb33a73a7dce3636bcd0e13ff data\mmorpg\runes\oni.json
 293be14368701aa15a4d13bfd8612d4cca2ddac4 data\mmorpg\runes\psi.json
-a5d5d0a411cfdb11dcde37a9ee7c5695f21889fc data\mmorpg\runes\qar.json
-40d0bc866869b31a84f1f86ab08c8b4bd6fff186 data\mmorpg\runes\rah.json
-ccd2fd5c2592c61f5abe23e305e2dd0c5e051117 data\mmorpg\runes\voh.json
-8f0c7e77dfe09ed66a9a611c037642d8ab275a31 data\mmorpg\runes\wor.json
-214202c67aef1f1e1cc8a8633b6277df42274d01 data\mmorpg\runes\xah.json
+bfdc40910b8e309ee122c6227ddc508882f7be28 data\mmorpg\runes\qar.json
+f2a65cec2372e6c9efaff4ce69fb32c71f826a74 data\mmorpg\runes\rah.json
+9f2463b0cbc23da0c880c129c03f395db00efbf8 data\mmorpg\runes\voh.json
+6961e252a19641d4fd5fb8ef5c92ec49998d3eba data\mmorpg\runes\wor.json
+03fa0152c5aa493f5cff74947f6e68b374ce82e9 data\mmorpg\runes\xah.json
 561f4092dafeb6095c3b7f751bd78e34a715ef67 data\mmorpg\rune_words\2_runes\bloom.json
 27a2db11ef1b9374fc0fac9ac3215b377d2e6dae data\mmorpg\rune_words\2_runes\magic.json
 33ba2ae40a8a8a94bcb67291864bac347f99eddf data\mmorpg\rune_words\2_runes\magma.json
