@@ -15,11 +15,12 @@ public interface IStatTransfer extends IGUID {
 
         for (TransferMethod stat : this.Transfer()) {
 
-            float val = copy.getCreateStat(stat.converted.GUID()).Flat * data.val /* percent */ / 100;
+            float val = copy.peekAtStat(stat.converted.GUID()).Flat * data.val /* percent */ / 100;
 
-            unit.getCreateStat(stat.converted).Flat -= val;
-            unit.getCreateStat(stat.statThatBenefits).Flat += val;
-
+            if (val != 0) {
+                unit.getCreateStat(stat.converted).Flat -= val;
+                unit.getCreateStat(stat.statThatBenefits).Flat += val;
+            }
         }
 
     }
